# dirkill

./: Cargo.toml  README.md
src/: app.rs  args.rs  color.rs  files.rs  lib.rs  logs.rs  main.rs
