[package]
name = "dirkill"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stupidly fast directory deletion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytesize = "1.1"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25"
dunce = "1.0"
fs_extra = "1.2"
parking_lot = "0.12"
strip-ansi-escapes = "0.1"
thiserror = "1.0"
tui = "0.19"
walkdir = "2.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[target.'cfg(profile = "release")'.dependencies]
dirs = "4.0.0"
