[package]
name = "dirkill"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stupidly fast directory deletion"

# Publishing profile for building the binary
[profile.release-publish]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27.0"
dunce = "1.0"
parking_lot = "0.12"
strip-ansi-escapes = "0.2"
thiserror = "1.0"
tui = "0.19"
walkdir = "2.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
fs_extra = "1.3"
